hphp/hack/test/typecheck/references/call_time_reference2.php.exp
File "call_time_reference2.php", line 4, characters 13-15:
Arrays cannot contain references. (Typing[4225])
